<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    tools:context=".ui.screen.RegisterScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/buttonLanguage"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/uk_flag" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/dummy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLanguage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/authorization"
            android:textColor="@color/textDark"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/enter_phone"
            android:textColor="@color/textDark"
            app:layout_constraintTop_toBottomOf="@+id/txt1" />

        <androidx.cardview.widget.CardView
            app:cardElevation="8dp"
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/txt2">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/outerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/background_edit_round8"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/uz_flag" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center|start"
                        android:text="@string/front_phone"
                        android:textColor="@color/textDark"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/inputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:digits="0123456789"
                        android:hint="@string/hint_phone"
                        android:imeOptions="actionNext"
                        android:inputType="numberSigned"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:textColor="@color/textDark" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/outerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/background_edit_round8"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center|start"
                        android:text="@string/name"
                        android:textColor="@color/textDark"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/inputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="name"
                        android:background="@null"
                        android:hint="@string/hint_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@color/textDark" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/errorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/error_name"
                    android:textColor="@color/mainLight"
                    android:textSize="12sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/outerSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/background_edit_round8"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center|start"
                        android:text="@string/surname"
                        android:textColor="@color/textDark"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/inputSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hint_surname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@color/textDark" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/errorSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/error_surname"
                    android:textColor="@color/mainLight"
                    android:textSize="12sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/outerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/background_edit_round8"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center|start"
                        android:text="@string/password"
                        android:textColor="@color/textDark"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@null"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@color/textDark" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/outerPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/background_edit_round8"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:gravity="center|start"
                        android:text="@string/password"
                        android:textColor="@color/textDark"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/inputConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@null"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@color/textDark" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/errorPasswordMatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/error_password_match"
                    android:textColor="@color/mainLight"
                    android:textSize="12sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/errorPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/error_password_format"
                    android:textColor="@color/mainLight"
                    android:textSize="12sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/selector_button_corner8"
                    android:enabled="false"
                    android:text="@string/txtContinue"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:fontFamily="@font/montserrat_semi_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            android:buttonTint="@color/mainLight"
            android:gravity="center"
            android:text="@string/privacy"
            app:layout_constraintTop_toBottomOf="@id/inputField" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>