<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_main_color"
    tools:context=".ui.screen.SplashScreen">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:lottie_autoPlay="true"
        app:lottie_fileName="splash_animation.json" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtWelcome"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAnorbank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:fontFamily="@font/montserrat_semi_bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtChooseLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/chooseLanguage"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/buttonUZ"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_round8"
            android:clickable="true"
            android:focusable="true">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="20dp"
                android:src="@drawable/uz_flag" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/uz"
                android:textColor="@color/white"
                app:fontFamily="@font/montserrat_semi_bold" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/buttonRU"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_round8"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="20dp"
                android:src="@drawable/ru_flag" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/ru"
                android:textColor="@color/white"
                app:fontFamily="@font/montserrat_semi_bold" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/buttonUK"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_round8"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="20dp"
                android:src="@drawable/uk_flag" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/uk"
                android:textColor="@color/white"
                app:fontFamily="@font/montserrat_semi_bold" />

        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>