<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    tools:context=".ui.screen.VerificationScreen">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:background="@drawable/background_button_transparent_round8"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dummy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/verificaion"
        android:textColor="@color/textDark"
        android:textSize="24sp"
        app:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/verify_message"
        android:textColor="@color/textDark"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/errorPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Code is incorrect"
                android:textColor="@color/mainLight"
                android:textSize="12sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/outerCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:background="@drawable/background_edit_round8"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:digits="0123465789"
                    android:gravity="center"
                    android:hint="@string/hint_verify"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:textColor="@color/textDark" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/selector_button_corner8"
                android:enabled="false"
                android:text="@string/txtContinue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:fontFamily="@font/montserrat_semi_bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Code arrive within: 60"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/inputField" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonResend"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/background_button_transparent_round8"
        android:gravity="center"
        android:text="Retry"
        android:textAllCaps="false"
        android:textColor="@color/mainDark"
        android:textSize="12sp"
        app:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer" />

</androidx.constraintlayout.widget.ConstraintLayout>